--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,18 @@
     "build": "./node_modules/.bin/tsc"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
+    "@types/prompts": "^2.0.9",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "prompts": "^2.4.0",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^3.1.2"
   }
 }
