--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,12 @@
     "target": "ES5",
     "strict": true,
     "outDir": "build",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+            "*": [
+                "node_modules/",
+                "src/types/*"
+            ]
+        }
   }
 }
