--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "nodemon": "^2.0.7",
+    "pkg": "^4.4.9",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "socket.io-client": "^3.1.2"
+    "socket.io-client": "^3.1.2",
+    "socket.io-stream": "^0.9.1"
   }
 }
