--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "prompts": "^2.4.0",
     "socket.io": "^3.1.2",
     "socket.io-client": "^3.1.2",
+    "socket.io-stream": "^0.9.1",
     "sprintf-js": "^1.1.2"
   }
 }
