--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "socket.io-client": "^3.1.2",
-    "socket.io-stream": "^0.9.1"
+    "socket.io-stream": "^0.9.1",
+    "string-argv": "^0.3.1"
   }
 }
