--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,8 +8,8 @@
     "esModuleInterop": true,
     "paths": {
             "*": [
-                "node_modules/",
-                "src/types/*"
+                "./node_modules/",
+                "./src/types/*"
             ]
         }
   }
